Switched from title case to sentence case for non-English languages for consistency

--- a/src/main/resources/assets/farmersdelight/lang/es_cl.json
+++ b/src/main/resources/assets/farmersdelight/lang/es_cl.json
@@ -1,4 +1,4 @@
 {
-	"block.farmersdelight.pumpkin_pie": "Torta de Zapallo",
-	"item.farmersdelight.pumpkin_pie_slice": "Rebanada de Torta de Zapallo"
+	"block.farmersdelight.pumpkin_pie": "Torta de zapallo",
+	"item.farmersdelight.pumpkin_pie_slice": "Rebanada de torta de zapallo"
 }
