--- a/src/main/resources/assets/farmersdelight/lang/pl_pl.json
+++ b/src/main/resources/assets/farmersdelight/lang/pl_pl.json
@@ -1,4 +1,4 @@
 {
-	"block.farmersdelight.pumpkin_pie": "Ciasto Dyniowe",
-	"item.farmersdelight.pumpkin_pie_slice": "Kawałek Ciasta Dyniowego"
+	"block.farmersdelight.pumpkin_pie": "Ciasto dyniowe",
+	"item.farmersdelight.pumpkin_pie_slice": "Kawałek ciasta dyniowego"
 }
